Minor change to package.json.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trent-b-s-dream-world",
+  "name": "trentb-dream-world",
   "version": "1.0.0",
   "private": true,
   "description": "Trent B's Dream World",
