Added PT Sans as a fontsource package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/pt-sans": "^4.3.0",
     "gatsby": "^3.3.1",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "react": "^17.0.1",
