Renamed site and package names to trentb-on-gatsby

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "trentb-dream-world",
+  "name": "trentb-on-gatsby",
   "version": "1.0.0",
   "private": true,
-  "description": "Trent B's Dream World",
+  "description": "Trent B on Gatsby!",
   "author": "trentb10",
   "keywords": [
     "gatsby"
