--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.3.1",
-    "gatsby-plugin-sass": "^4.4.0",
-    "react": "^17.0.1",
+    "gatsby": "^5.12.3",
+    "gatsby-plugin-sass": "^6.12.0",
+    "react": "^18.2.0",
     "react-collapsible": "^2.8.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.12"
+  },
+  "devDependencies": {
+    "gatsby-plugin-netlify": "^5.1.0"
   }
 }
