Imported Victor Mono as a font, needs further testing to make sure site works properly with it

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-collapsible": "^2.8.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "victormono": "^1.5.5"
   },
   "devDependencies": {
     "gatsby-plugin-netlify": "^5.1.0"
